
Name: Your Name (web page or e-mail)
Date: yyyy/mm/dd hh:mm:ss
Tag: cvs-tag-for-this-change
Description:

Here is a test entry

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: yyyy/mm/dd
Description:



----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2012/08/02
Description:
Fixed bugs #89 and #96: Build Failure with Xcode 4.3
Also removed build support for MacOS X pre-10.5 (Leopard) on PPC and
pre-10.6 (Snow Leopard) on Intel.

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2012/02/05
Description:
Fixed bug #88.  The check for valid arcs on Unix systems now allows
any character other than slash or nul.

----------------------------------------------------------------------
Name: David MacQueen (dbm@cs.uchicago.edu)
Date: 2012/01/20
Description:

*************************** Version 110.74 ***************************

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2012/01/20
Description:

Fixed implementation of Real.signBit on little-endian machines.

----------------------------------------------------------------------
Name: David MacQueen (dbm@cs.uchicago.edu)
Date: 2012/1/19
Revision: 3664, 3665
Description:

1) Fix for (gforge) bug #60
   recalculate strictness for DEFtycs in functor bodies when functor
   is applied  (Elaborator/modules/evalent.sml)

2) Fix for (gforge) bug #77
   separate ast representations for datatypes and datatype replications
   in decs and specs (multiple files)

3) set version to 110.74

Details in NOTES/changes/dbm_2012_1.

----------------------------------------------------------------------
Name: David MacQueen (dbm@cs.uchicago.edu)
Date: 2012/1/12
Revision: 3648, 3652
Description:

1) Change of SourceMap interface.