@@ -82,6 +82,15 @@ We expect that 110.75 will be the last release using the current version numberi
     </ul>
   </dd>
 
+  <dt>Language Processing Tools (ML-LPT)</dt>
+  <dd>
+    <ul>
+      <li>Performance improvements and eliminated the direct dependency of ml-ulex
+        lexers on the SML/NJ Library.
+      </li>
+    </ul>
+  </dd>
+
   <dt>Bugs:</dt>
   <dd>
     <p>Here is a list of tracked bugs fixed (or closed) with this release, please see the
